# cinema_tui

./: Cargo.toml  todo.md
src/: app.rs  main.rs
src/app/: app.rs  mod.rs  omd.rs  ritz.rs  utils.rs
src/ui/: footer.rs  header.rs  loading.rs  main_content.rs  mod.rs  movie_detail.rs  ui.rs
