[package]
name = "cinema_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29.0"
dirs = "5.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
scraper = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
throbber-widgets-tui = "0.10.0"
ratatui-image = { version = "10.0.4", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
tui-big-text = "0.8.1"
urlencoding = "2.1"